/**
 *  This file defines the Host Maintenance Service in Peloton API
 */

syntax = "proto3";

package peloton.api.host.svc;

option go_package = "peloton/api/host/svc";
option java_package = "peloton.api.host.svc";

import "mesos/v1/mesos.proto";
import "peloton/api/host/host.proto";

/**
 *  HostService defines the host related methods such as query hosts, start maintenance,
 *  complete maintenance etc.
 */
service HostService
{
    // Get hosts which are in one of the specified states
    rpc QueryHosts(QueryHostsRequest) returns (QueryHostsResponse);

    // Start maintenance on the specified hosts
    rpc StartMaintenance(StartMaintenanceRequest) returns (StartMaintenanceResponse);

    // Complete maintenance on the specified hosts
    rpc CompleteMaintenance(CompleteMaintenanceRequest) returns (CompleteMaintenanceResponse);
}

message QueryHostsRequest {
    repeated host.HostState hostStates = 1;
}

message QueryHostsResponse {
    repeated host.HostInfo hosts = 1;
}

message StartMaintenanceRequest {
    repeated mesos.v1.MachineID machineIDs = 1;
    string user = 2;
    string password = 3;
}

message StartMaintenanceResponse {}

message CompleteMaintenanceRequest {
    repeated mesos.v1.MachineID machineIDs = 1;
    string user = 2;
    string password = 3;
}

message CompleteMaintenanceResponse {}
